# scream-example

./: .gitignore  .scream  README.md  docs.md  tox.ini
common/: README.md  setup.cfg  setup.py
common/company/common/: module.py
common/tests/: test_module.py
project/: README.md  setup.cfg
project/tests/: test_module.py
