# Whats this?
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = company_project
author = example_github_user
email = example_email@gmail.com
version = 0.0.1
description = Your package description!
long_description = file: README.md

[options]
# Namespace packages are not zip safe
zip_safe = False
packages = find:
python_requires = 3.6
nstall_requires =
    company_common
    flask

dependency_links =
    git+ssh://git@github.com/r-kells/scream_example.git@master#egg=company_common-0#subdirectory=common
[options.packages.find]
exclude =
    tests
